# MedGraph-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  implematation_plan.md  implementation.md  main.py  pyproject.toml  requirements.txt
data/: evaluation_logs.csv
data/markdowns/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  converted.json
data/staging/: metadata.json  structured_documents.json
docs/: RAGAS_INTEGRATION_GUIDE.md  RAGAS_QUICK_REFERENCE.md
examples/: ragas_evaluation_example.py
pages/: 1_about.py  evaluation_dashboard.py
scripts/: build_graph.py  converter.py  fetch_abstracts.py  fetch_pdfs.py  run_communities.py  run_docker_locally.ps1  stage_data.py  tempCodeRunnerFile.py
src/: evaluation.py  extraction.py  graph.py  ingestion.py  llm.py  prompts.py  reasoning.py  retriever.py  schema.py
tests/: test_phase3.py
